Bug 1224840 - Fix Assertion failure: IsOuterWindow() in nsMsgProgress.cpp. r=mkmelin

--HG--
extra : amend_source : 1116f217a57df6afa581eb0c57aed4979f3dbf13